# Activity-Logger

./: .gitignore  Cargo.toml  DISTRIBUTION.md  README.md  RELEASE-GUIDE.md  build-package.ps1  build-package.sh  create_icon.py  resources.rc  run.bat  run.sh
.github/workflows/: rust.yml
assets/: config.json  index.html
src/: config.rs  embedded.rs  hotkey.rs  main.rs  notification.rs  report.rs  screenshot_mod.rs  server.rs  tracker.rs  tray.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
