[package]
name = "activity_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
device_query = "1.1"
sysinfo = "0.29"
tempfile = "3.8"
chrono = "0.4"
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3" }
windows-service = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.20.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
core-foundation = "0.9"
